created conclusion and added Luka's part

--- a/analysis.html
+++ b/analysis.html
@@ -50,10 +50,13 @@
               <a class="nav-link" href="index.html#dataset">Dataset</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="viz.html">Dashboards</a>
+              <a class="nav-link" href="viz.html">Dashboard</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="analysis.html">Analysis</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="conclusion.html">Conclusion</a>
             </li>
           </ul>
         </div>
@@ -73,6 +76,7 @@
             </nav>
             <h1 class="text-center">Analysis</h1>
           </div>
+          <a href="#all" class="btn-scroll" data-role="smoothscroll"><span class="mai-arrow-down"></span></a>
         </div>
       </div>
     </div>
@@ -104,8 +108,9 @@
     }
   </style>
 
-  <div class="page-section">
-    <div class="container" id="all" style="display: block;">
+  <div class="page-section" id="all">
+    <div class="container">
+
       <div class="row align-items-center">
         <div class="col-lg-6 py-3 wow fadeInUp">
           <span class="subhead">Dataset by DataSD</span>
@@ -128,8 +133,10 @@
         </div>
       </div>
     </div> <!-- .container -->
-
-    <div class="container" id="motiv" style="display: block;">
+    <a href="#motiv" class="btn-scroll" data-role="smoothscroll"><span class="mai-arrow-down"></span></a>
+  </div>
+  <div class="page-section bg-light" id="motiv">
+    <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 py-3 wow fadeInUp">
           <div class="img-fluid py-3 text-center">
@@ -153,8 +160,10 @@
         </div>
       </div>
     </div> <!-- .container -->
-
-    <div class="container" id="typ" style="display: block;">
+    <a href="#typ" class="btn-scroll" data-role="smoothscroll"><span class="mai-arrow-down"></span></a>
+  </div>
+  <div class="page-section" id="typ">
+    <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 py-3 wow fadeInUp">
           <span class="subhead">Dataset by DataSD</span>
@@ -177,8 +186,10 @@
         </div>
       </div>
     </div> <!-- .container -->
-
-    <div class="container" id="weapon" style="display: block;">
+    <a href="#weapon" class="btn-scroll" data-role="smoothscroll"><span class="mai-arrow-down"></span></a>
+  </div>
+  <div class="page-section bg-light" id="weapon">
+    <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 py-3 wow fadeInUp">
           <div class="img-fluid py-3 text-center">
@@ -202,8 +213,10 @@
         </div>
       </div>
     </div> <!-- .container -->
-
-    <div class="container" id="susrace" style="display: block;">
+    <a href="#susrace" class="btn-scroll" data-role="smoothscroll"><span class="mai-arrow-down"></span></a>
+  </div>
+  <div class="page-section" id="susrace">
+    <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 py-3 wow fadeInUp">
           <span class="subhead">Dataset by DataSD</span>
@@ -226,8 +239,10 @@
         </div>
       </div>
     </div> <!-- .container -->
-
-    <div class="container" id="sussex" style="display: block;">
+    <a href="#sussex" class="btn-scroll" data-role="smoothscroll"><span class="mai-arrow-down"></span></a>
+  </div>
+  <div class="page-section bg-light" id="sussex">
+    <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 py-3 wow fadeInUp">
           <div class="img-fluid py-3 text-center">
@@ -251,8 +266,10 @@
         </div>
       </div>
     </div> <!-- .container -->
-
-    <div class="container" id="vicrace" style="display: block;">
+    <a href="#vicrace" class="btn-scroll" data-role="smoothscroll"><span class="mai-arrow-down"></span></a>
+  </div>
+  <div class="page-section" id="vicrace">
+    <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 py-3 wow fadeInUp">
           <span class="subhead">Dataset by DataSD</span>
@@ -275,8 +292,10 @@
         </div>
       </div>
     </div> <!-- .container -->
-
-    <div class="container" id="vicsex" style="display: block;">
+    <a href="#vicsex" class="btn-scroll" data-role="smoothscroll"><span class="mai-arrow-down"></span></a>
+  </div>
+  <div class="page-section bg-light" id="vicsex">
+    <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 py-3 wow fadeInUp">
           <div class="img-fluid py-3 text-center">
@@ -300,9 +319,10 @@
         </div>
       </div>
     </div> <!-- .container -->
+    <a href="#repall" class="btn-scroll" data-role="smoothscroll"><span class="mai-arrow-down"></span></a>
   </div> <!-- .page-section -->
 
-  <div class="page-section bg-light">
+  <div class="page-section" id="repall">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 py-3 wow fadeInUp">
@@ -362,9 +382,10 @@
         </div>
       </div>
     </div> <!-- .container -->
+    <a href="#bias" class="btn-scroll" data-role="smoothscroll"><span class="mai-arrow-down"></span></a>
   </div> <!-- .page-section -->
 
-  <div class="page-section">
+  <div class="page-section bg-light" id="bias">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 py-3 wow fadeInUp">
@@ -405,7 +426,8 @@
             biases the offender has as their motivation behind the Hate Crimes which are Gender, Disability, Sexual
             Orientation, Religion, and Race. Race is the most popular motivation as more than half of the cases are for
             this reason at 61.89%, followed by Sexual Orientation at 22.90%, Religion at 14.51%, Gender at 0.39%, and
-            Disability at 0.31%. Hovering over each piece of the pie shows a more in depth look at the particular Bias.</p>
+            Disability at 0.31%. Hovering over each piece of the pie shows a more in depth look at the particular Bias.
+          </p>
         </div>
         <div class="col-lg-6 py-3 wow fadeInRight">
           <p>In the details for the Race portion we see that the most targeted race is African Americans with the
@@ -429,9 +451,10 @@
         </div>
       </div>
     </div> <!-- .container -->
+    <a href="#offense" class="btn-scroll" data-role="smoothscroll"><span class="mai-arrow-down"></span></a>
   </div> <!-- .page-section -->
 
-  <div class="page-section bg-light">
+  <div class="page-section" id="offense">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 py-3 wow fadeInUp">
@@ -479,9 +502,10 @@
         </div>
       </div>
     </div> <!-- .container -->
+    <a href="#area" class="btn-scroll" data-role="smoothscroll"><span class="mai-arrow-down"></span></a>
   </div> <!-- .page-section -->
 
-  <div class="page-section">
+  <div class="page-section bg-light" id="area">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 py-3 wow fadeInUp">
@@ -528,9 +552,10 @@
         </div>
       </div>
     </div> <!-- .container -->
+    <a href="#loc" class="btn-scroll" data-role="smoothscroll"><span class="mai-arrow-down"></span></a>
   </div> <!-- .page-section -->
 
-  <div class="page-section bg-light">
+  <div class="page-section" id="loc">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 py-3 wow fadeInRight">
@@ -580,6 +605,102 @@
             sense as this is at the time of 9/11, after this however the plot shows there is a general decrease. The
             next prominent locations include Parking/Drop Lot/Garage at 7.75% and School/College at 6.17%. All other
             locations including Church/Synagogue/Temple/Mosque, Jail/Prison, and Field/Woods are all less than 5%.</p>
+        </div>
+      </div>
+    </div> <!-- .container -->
+    <a href="#comp" class="btn-scroll" data-role="smoothscroll"><span class="mai-arrow-down"></span></a>
+  </div> <!-- .page-section -->
+
+  <div class="page-section bg-light" id="comp">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-12 py-3 wow fadeInUp">
+          <span class="subhead">Dataset by U.S. Census Bureau</span>
+          <h2 class="title-section">Comparison of Case-Race-Ratio (2013-2019)</h2>
+          <div class="divider"></div>
+          <div class="img-fluid py-3 text-center">
+            <div class='tableauPlaceholder' id='viz1637207238496' style='position: relative;'>
+              <noscript>
+                <a href='#'>
+                  <img alt='Dashboard 1 '
+                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sh&#47;ShareofRacesinthePopulationofSanDiego_16372072273260&#47;Dashboard1&#47;1_rss.png'
+                    style='border: none' />
+                </a>
+              </noscript>
+              <object class='tableauViz' style='display:none;'>
+                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                <param name='embed_code_version' value='3' />
+                <param name='site_root' value='' />
+                <param name='name' value='ShareofRacesinthePopulationofSanDiego_16372072273260&#47;Dashboard1' />
+                <param name='tabs' value='no' />
+                <param name='toolbar' value='yes' />
+                <param name='static_image'
+                  value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sh&#47;ShareofRacesinthePopulationofSanDiego_16372072273260&#47;Dashboard1&#47;1.png' />
+                <param name='animate_transition' value='yes' />
+                <param name='display_static_image' value='yes' />
+                <param name='display_spinner' value='yes' />
+                <param name='display_overlay' value='yes' />
+                <param name='display_count' value='yes' />
+                <param name='language' value='de-DE' />
+                <param name='filter' value='publish=yes' />
+              </object>
+            </div>
+            <script type='text/javascript'>
+              var divElement = document.getElementById('viz1637207238496');
+              var vizElement = divElement.getElementsByTagName('object')[0];
+              if (divElement.offsetWidth > 800) {
+                vizElement.style.width = '100%';
+                vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+              } else if (divElement.offsetWidth > 500) {
+                vizElement.style.width = '100%';
+                vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
+              } else {
+                vizElement.style.width = '100%';
+                vizElement.style.height = '727px';
+              }
+              var scriptElement = document.createElement('script');
+              scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+              vizElement.parentNode.insertBefore(scriptElement, vizElement);
+            </script>
+          </div>
+        </div>
+        <div class="col-lg-6 py-3 wow fadeInUp">
+          <p>The next dataset we will use to look at for visualizations is from the U.S. Census Bureau in cooperation
+            with the Population Estimates Program.</p>
+          <p>First we analyzed the share of the different races in the Population in San Diego County over the years
+            2013 until 2019. In the graph you can see that there were no significant differences in the shares of the
+            races in the population. This allows us to use the mean of the shares of these 5 races within the 7 years as
+            a representative share for the population of San Diego County. These calculated numbers give us the
+            representative shares of the races in the population of San Diego County which you can find also in the
+            graph
+            above.</p>
+          <p>White is the predominant race of people that live in San Diego. More than 75% of the population belongs to
+            this race. The next biggest race are Asians with a share slightly smaller than 12%. The next two less
+            dominant races are Black or African American and people with multiple races, both of these groups have a
+            share close to 5%. The smallest group in the population are the American Indian and Alaska Natives with a
+            share smaller than 1%.</p>
+          <p>We can now use these shares of races in the population to compare the population with the hate crime
+            numbers.</p>
+          
+        </div>
+        <div class="col-lg-6 py-3 wow fadeInUp">
+          <p>For the American Indian or Alaska Native race, we found the smallest difference in the share in the
+            population compared to the share in hate crimes. They represent about 0.7% of the population and commit 1%
+            of all hate crimes. The difference is equally small for multiracial people. They make up about 5.5% of the
+            population and commit about 3% of hate crimes.
+          </p>
+          <p>White race makes up about 76% of the population and commits about 80% of hate crimes. Although they do by
+            far commit the highest percentage of hate crime offenses, putting this number in perspective with the
+            population percentage of White people shows there is technically a small difference given the enormous size
+            of the share in the population.</p>
+          <p>The biggest difference can be seen in the race of Asians and Black or African Americans. Asians represent
+            about 13% of the population but only commit about 2% of hate crimes, which is a large difference in this
+            analysis.</p>
+          <p>As a result, Asians are a very tolerant race and commit very few racially motivated crimes. The opposite of
+            this is the Black or African American race. They make up about 5% of the population but commit more than 14%
+            of hate crimes, suggesting that this race commits an above-average number of racially motivated crimes
+            compared to all other races.
+          </p>
         </div>
       </div>
     </div> <!-- .container -->
