--- a/conclusion.html
+++ b/conclusion.html
@@ -56,8 +56,8 @@
               <a class="nav-link" href="analysis.html">Analysis</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="conclusion.html">Conclusion</a>
-            </li>
+                <a class="nav-link" href="conclusion.html">Conclusion</a>
+              </li>
           </ul>
         </div>
 
@@ -71,10 +71,10 @@
             <nav aria-label="Breadcrumb">
               <ul class="breadcrumb justify-content-center py-0 bg-transparent">
                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                <li class="breadcrumb-item active">Dashboard</li>
+                <li class="breadcrumb-item active">Conclusion</li>
               </ul>
             </nav>
-            <h1 class="text-center">Dashboard</h1>
+            <h1 class="text-center">Conclusion</h1>
           </div>
         </div>
       </div>
@@ -86,54 +86,17 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-12 py-3 wow fadeInUp">
-          <span class="subhead">Dataset by DataSD</span>
-          <h2 class="title-section">Hate Crime Dashboard</h2>
+          <h2 class="title-section">Conclusion over all Analysis</h2>
           <div class="divider"></div>
-          <div class="img-fluid py-3 text-center">
-            <div class='tableauPlaceholder' id='viz1637001231954' style='position: relative'>
-              <noscript><a href='#'>
-                  <img alt='Hate Crime Dashboard '
-                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ha&#47;HateCrimeinSanDiegoAutosize&#47;HateCrimeDashboard&#47;1_rss.png'
-                    style='border: none' />
-                </a></noscript>
-              <object class='tableauViz' style='display:none;'>
-                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-                <param name='embed_code_version' value='3' />
-                <param name='site_root' value='' />
-                <param name='name' value='HateCrimeinSanDiegoAutosize&#47;HateCrimeDashboard' />
-                <param name='tabs' value='no' />
-                <param name='toolbar' value='yes' />
-                <param name='static_image'
-                  value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ha&#47;HateCrimeinSanDiegoAutosize&#47;HateCrimeDashboard&#47;1.png' />
-                <param name='animate_transition' value='yes' />
-                <param name='display_static_image' value='yes' />
-                <param name='display_spinner' value='yes' />
-                <param name='display_overlay' value='yes' />
-                <param name='display_count' value='yes' />
-                <param name='language' value='en-US' />
-                <param name='filter' value='publish=yes' />
-              </object>
-
-              <script type='text/javascript'>
-                var divElement = document.getElementById('viz1637001231954');
-                var vizElement = divElement.getElementsByTagName('object')[0];
-                if (divElement.offsetWidth > 800) {
-                  vizElement.style.width = '100%';
-                  vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-                } else if (divElement.offsetWidth > 500) {
-                  vizElement.style.width = '100%';
-                  vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px';
-                } else {
-                  vizElement.style.width = '100%';
-                  vizElement.style.height = '1727px';
-                }
-                var scriptElement = document.createElement('script');
-                scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-                vizElement.parentNode.insertBefore(scriptElement, vizElement);
-              </script>
-
-            </div>
-          </div>
+          <p>Our visualizations have given us a better understanding of the Hate Crime Data and has allowed us to come to conclusions about Hate Crime in San Diego.</p>
+          <p>We discovered that the timeline for Hate Crimes is important as the years leading up to 2001 generally increased with 2001 as the highest peak which we attributed to the aftermath of 9/11. After 2001 however, there is a slow decrease over the years.</p>
+          <p>The most popular place for hate crimes is the highway, road, alley, street, or sidewalk and the ​​most common form of offense is destruction, damage, or vandalism of property.</p>
+          <p>One of our major findings is that Race is the most popular motivation behind the offender’s hate crimes as over half of the cases stemmed from racial issues. Additionally, White people have the highest offender rate at 80%, however once we put this into perspective we saw that this is not significant based on the percentage of White people in the population.</p>
+          <p>The most interesting findings instead were that Asians are a tolerant race as they have significantly less hate crimes committed compared to their population percentage.</p>
+          <p>Black people or African Americans on the other hand have more hate crimes committed compared to their population average.</p>
+          <p>Given our most important findings, we can suggest more surveillance in roads, alleys, and streets to help prevent more Hate Crimes. When most people think of ‘Hate Crimes’ they may instantly think of contact violence, however as we uncovered, the most common form of Hate Crime is destruction and vandalism.</p>
+          <p>A victim may not have property insurance but an offender can destroy their property and the victim may not get compensation. For this reason, there should be more laws in place to reprehend the offender and also laws to help the targeted victim regardless of their insurance.</p>
+          <p>We also discovered race is the most prominent motivation for committing a hate crime, therefore we suggest that there are more training seminars in workplaces for example that focus on racial biases.</p>
         </div>
       </div>
     </div>
