added Nias part

--- a/analysis.html
+++ b/analysis.html
@@ -117,9 +117,11 @@
           <h2 class="title-section">Hate Crimes in San Diego (2016-2020)</h2>
           <div class="divider"></div>
 
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-            et dolore magna aliquyam erat, sed diam voluptua.</p>
-          <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+          <p>The largest heat spots indicate that up to six Hate Crimes occurred in that area. These clusters tended to
+            appear in the central and southern coastal areas of San Diego, with a greater instances of Hate Crimes in
+            the Normal Heights neighborhood and south of the Little Italy neighborhood. There are also notable areas of
+            four Hate Crime incidents near the North Island Naval Air Station on the Coronado Peninsula, and four Hate
+            Crime incidents on the east side of San Diego by El Cajon.</p>
         </div>
         <div class="col-lg-6 py-3 wow fadeInRight">
           <div class="img-fluid py-3 text-center">
@@ -154,9 +156,9 @@
           <h2 class="title-section">Hate Crimes by Motivation in San Diego (2016-2020)</h2>
           <div class="divider"></div>
 
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-            et dolore magna aliquyam erat, sed diam voluptua.</p>
-          <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+          <p>While there are 9 possible motivations, the majority of the points represent Hate Crimes that are motivated
+            by race (87 incidents), sexual orientation (53 incidents), or religion (38 incidents). The remaining
+            motivators accounted for 1-3 incidents each.</p>
         </div>
       </div>
     </div> <!-- .container -->
@@ -170,9 +172,9 @@
           <h2 class="title-section">Hate Crimes based on Type of Crime in San Diego (2016-2020)</h2>
           <div class="divider"></div>
 
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-            et dolore magna aliquyam erat, sed diam voluptua.</p>
-          <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+          <p>We can see that vandalism is the most common type of Hate Crime in San Diego, followed by threat and
+            assault with no weapon. The category “Other” includes a total of four Hate Crime incidents: burglary (two
+            incidents), arson (one incident), and simple assault (one incident).</p>
         </div>
         <div class="col-lg-6 py-3 wow fadeInRight">
           <div class="img-fluid py-3 text-center">
@@ -207,9 +209,10 @@
           <h2 class="title-section">Hate Crimes based on Weapon used in San Diego (2016-2020)</h2>
           <div class="divider"></div>
 
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-            et dolore magna aliquyam erat, sed diam voluptua.</p>
-          <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+          <p>The category “Other” actually accounted for the largest number of Hate Crimes, totaling 52 incidents. This
+            category included a range of weapons ranging from “Sharp Object” (three incidents), to “BB Gun” (one
+            incident). However, the top single category of weapon was “Hands, Fist Feet”, totaling 42 Hate Crimes. This
+            is followed by “Spray Paint” with 25 incidents and “Phone” with 17. </p>
         </div>
       </div>
     </div> <!-- .container -->
@@ -223,9 +226,9 @@
           <h2 class="title-section">Hate Crimes based on Suspect Race in San Diego (2016-2020)</h2>
           <div class="divider"></div>
 
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-            et dolore magna aliquyam erat, sed diam voluptua.</p>
-          <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+          <p>95 of the reported Hate Crime incidents noted the perpetrator as race “Unknown”. The next largest suspect
+            race category was “White” (47 incidents), followed by “Hispanic” (22 incidents) and “Black” (21 incidents).
+            There were two incidents total involving suspects of “Asian” or “Asian Pacific American” race.</p>
         </div>
         <div class="col-lg-6 py-3 wow fadeInRight">
           <div class="img-fluid py-3 text-center">
@@ -260,9 +263,9 @@
           <h2 class="title-section">Hate Crimes based on Suspect Sex in San Diego (2016-2020)</h2>
           <div class="divider"></div>
 
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-            et dolore magna aliquyam erat, sed diam voluptua.</p>
-          <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+          <p>There were 92 Hate Crime incidents involving male suspects, and 8 involving female suspects. 85 Hate Crime
+            incidents reported suspects of unknown sex and 2 were reported as “Other”.
+          </p>
         </div>
       </div>
     </div> <!-- .container -->
@@ -276,9 +279,10 @@
           <h2 class="title-section">Hate Crimes based on Victim Race in San Diego (2016-2020)</h2>
           <div class="divider"></div>
 
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-            et dolore magna aliquyam erat, sed diam voluptua.</p>
-          <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+          <p>55 reported incidents involved “White” victims, 44 involved “Black” victims, 37 involved “Hispanic” and 10
+            reported victims as “Other”. 8 incidents involved “Asian” victims. There was one victim each for “Asian
+            Pacific American” or “American Indian or Alaskan Native”. 1 Hate Crime involved a victim of an unknown race.
+          </p>
         </div>
         <div class="col-lg-6 py-3 wow fadeInRight">
           <div class="img-fluid py-3 text-center">
@@ -313,9 +317,8 @@
           <h2 class="title-section">Hate Crimes based on Victim Sex in San Diego (2016-2020)</h2>
           <div class="divider"></div>
 
-          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-            et dolore magna aliquyam erat, sed diam voluptua.</p>
-          <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</p>
+          <p> Nearly twice as many Hate Crime incidents were reported with male victims (102 incidents) than with female
+            victims (55 incidents).</p>
         </div>
       </div>
     </div> <!-- .container -->
@@ -681,7 +684,7 @@
             share smaller than 1%.</p>
           <p>We can now use these shares of races in the population to compare the population with the hate crime
             numbers.</p>
-          
+
         </div>
         <div class="col-lg-6 py-3 wow fadeInUp">
           <p>For the American Indian or Alaska Native race, we found the smallest difference in the share in the
