--- a/analysis.html
+++ b/analysis.html
@@ -699,10 +699,10 @@
           <p>The biggest difference can be seen in the race of Asians and Black or African Americans. Asians represent
             about 13% of the population but only commit about 2% of hate crimes, which is a large difference in this
             analysis.</p>
-          <p>As a result, Asians are a very tolerant race and commit very few racially motivated crimes. The opposite of
-            this is the Black or African American race. They make up about 5% of the population but commit more than 14%
-            of hate crimes, suggesting that this race commits an above-average number of racially motivated crimes
-            compared to all other races.
+          <p>African Americans make up about 5% of the population but in this dataset committed approximately 14% of Hate Crimes.
+          </p>
+          <p>
+            However, we cannot make any definite conclusions. There are various societal confounding factors involved in data analysis related to racial groups, and we should not conclude anything about which race is the biggest offender race. For instance, unfortunately there are often racial biases within the police department. This leads to a higher level of scrutiny and unfair treatment of African Americans. Consequently, when dealing with matters about race, one needs to be careful, there are racial biases throughout our whole society, therefore we cannot draw any definitive conclusions. 
           </p>
         </div>
       </div>
