--- a/conclusion.html
+++ b/conclusion.html
@@ -56,8 +56,8 @@
               <a class="nav-link" href="analysis.html">Analysis</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="conclusion.html">Conclusion</a>
-              </li>
+              <a class="nav-link" href="conclusion.html">Conclusion</a>
+            </li>
           </ul>
         </div>
 
@@ -88,15 +88,34 @@
         <div class="col-lg-12 py-3 wow fadeInUp">
           <h2 class="title-section">Conclusion over all Analysis</h2>
           <div class="divider"></div>
-          <p>Our visualizations have given us a better understanding of the Hate Crime Data and has allowed us to come to conclusions about Hate Crime in San Diego.</p>
-          <p>We discovered that the timeline for Hate Crimes is important as the years leading up to 2001 generally increased with 2001 as the highest peak which we attributed to the aftermath of 9/11. After 2001 however, there is a slow decrease over the years.</p>
-          <p>The most popular place for hate crimes is the highway, road, alley, street, or sidewalk and the ​​most common form of offense is destruction, damage, or vandalism of property.</p>
-          <p>One of our major findings is that Race is the most popular motivation behind the offender’s hate crimes as over half of the cases stemmed from racial issues. Additionally, White people have the highest offender rate at 80%, however once we put this into perspective we saw that this is not significant based on the percentage of White people in the population.</p>
-          <p>The most interesting findings instead were that Asians are a tolerant race as they have significantly less hate crimes committed compared to their population percentage.</p>
-          <p>Black people or African Americans on the other hand have more hate crimes committed compared to their population average.</p>
-          <p>Given our most important findings, we can suggest more surveillance in roads, alleys, and streets to help prevent more Hate Crimes. When most people think of ‘Hate Crimes’ they may instantly think of contact violence, however as we uncovered, the most common form of Hate Crime is destruction and vandalism.</p>
-          <p>A victim may not have property insurance but an offender can destroy their property and the victim may not get compensation. For this reason, there should be more laws in place to reprehend the offender and also laws to help the targeted victim regardless of their insurance.</p>
-          <p>We also discovered race is the most prominent motivation for committing a hate crime, therefore we suggest that there are more training seminars in workplaces for example that focus on racial biases.</p>
+          <p>Our visualizations have given us a better understanding of the Hate Crime Data and have allowed us to come
+            to conclusions about Hate Crime in San Diego. We discovered that the timeline for Hate Crimes is important
+            as the years leading up to 2001 generally increased with 2001 as the highest peak which we attributed to the
+            aftermath of 9/11. After 2001, however, there was a slow decrease over the years. The most common locations
+            for Hate Crimes to be committed are the public highway, road, alley, street, or sidewalk and the most common
+            form of offense is destruction, damage, or vandalism of property. One of our major findings is that race is
+            the most popular motivation behind the offender’s Hate Crimes as over half of the cases stemmed from racial
+            issues.</p>
+
+            <p>We also discovered that the Normal Heights neighborhood and south of the Little Italy neighborhood have the
+            highest crime rates in San Diego. Our investigation helped us determine that there is a significant amount
+            of both male suspects and male victims compared to the female counterparts and that the most targeted races
+            are White, Black and Hispanic.</p>
+
+           <p>Given our findings, we can suggest more surveillance in roads, alleys, and streets in particular near Normal
+            Heights and Little Italy may help prevent Hate Crimes. When most people think of ‘Hate Crimes’ they may
+            instantly think of contact violence, however as we uncovered, the most common form of Hate Crime is
+            destruction and vandalism. An offender may destroy someone’s property based on their biases, but the victim
+            may not have property insurance and may not get compensation. For this reason, our analysis could be used to
+            argue that there should be legislation to compensate victims when they lack property insurance. We also
+            discovered race is the most prominent motivation for committing a Hate Crime, therefore we recommend
+            training seminars in workplaces and schools that focus on racial biases. Finally, we believe that raising
+            awareness of the nature of Hate Crimes and decreasing the stigma of reporting for the victims would be
+            beneficial, as increased data could in turn help create better policies or procedures for combating Hate
+            Crime. Awareness campaigns should aim to incorporate strategies for people of all backgrounds and cultures,
+            particularly those that may be less likely to feel comfortable reporting. We understand that much more can
+            be done to help decrease Hate Crimes in San Diego and across the nation, but based on our findings we have
+            provided some suggestions where San Diego can start.</p>
         </div>
       </div>
     </div>
